# ecn_rasom

./: .gitignore  CMakeLists.txt  README.md  config.rviz  config_ekf.rviz  package.xml  waypoint.cpp
config/: auv.yaml  auv_control.yaml  auv_pid.yaml  brov2.yaml  ecn_auv_control.yaml  waypoints.yaml
launch/: PoseStampedGUI.yaml  auv.launch  auv_estim.launch  auv_sp.launch  box_auv.launch  config.rviz  config_ekf.rviz  config_thr.rviz  ekf.launch  manual.launch  uwsim.launch
scenes/: auv.xml  brov2.xml
scripts/: nav  odom2tf  sensors
src/: waypoint.cpp
subject/: rasom_lab.tex  rasom_lab.tex.backup
terrain/shipwreck/: terrain.sdf
urdf/: auv.urdf  auv.xacro  brov2.urdf  brov2.xacro  ecn_auv.xacro  terrain.sdf
