<?xml version="1.0"?>
<package format="2">
  <name>ecn_rasom</name>
  <version>0.1.0</version>
  <description>The ecn_rasom package</description>

  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
